<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_typebook"
            android:icon="@drawable/ic_style"
            android:title="@string/typebook" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_book"
            android:title="@string/book" />

        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bill" />

        <item
            android:id="@+id/nav_change"
            android:icon="@drawable/ic_security"
            android:title="@string/changePass" />
    </group>

</menu>
